<resources>
    <string name="app_name">MyMusicApp2.0</string>
    <string name="Alb">Albums</string>
    <string name="NSAlb">Nina Simone\n \"I Put A Spell On You\"</string>
    <string name="ELAlb">Ella Fitzgerald and Louis Armstrong\n \"Together\"</string>
    <string name="Song">Author of the song and it\'s title</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="seekBarStatus">0:00</string>
    <string name="skip">Skip to now playing...</string>
    <string name="backToMain">Back to main menu</string>
    <string name="backToAlbum">Back to album</string>
</resources>
